# dit-framework

./: CONTRIBUTING.md  Interaction Boundary Constraint (Harber, 2026).md  README.md  baseline.py  boundary_test.py  config.example.yaml  credit_lending.py  map.py  probes.py  pyproject.toml  run_dit.py
mnt/user-data/outputs/dit-framework/experiments/introspection/: README.md
